themes: fix the suggested-action and destructive-action classes.
We didn't have a "destructive-action" class anymore and the
"suggested-action" was hidden by further CSS rule, so it needed to be
moved down so that it gets precedence.

We used to have these as red and green buttons originally (e.g. pasting
as floating selection, the "New Layer" and "Anchor" were the suggested
actions, i.e. green, whereas "Delete Layer" was destructive, red). For
GIMP 3.0, we keep grayscale design. We'll see if this will change later,
but at least, now we have something again.

--- a/themes/Default/common.css
+++ b/themes/Default/common.css
@@ -377,15 +377,6 @@ button.default {
   border: 1px solid shade(@fg-color, 0.7);
 }
 
-/* This is the default active action, the somehow "suggested" action. Usually it
- * means this is either the expected next step action (e.g. activating a
- * filter), or else the less destructive action (e.g. when closing an unsaved
- * image, the default is "Cancel").
- */
-button.suggested-action {
-  border: 1px dotted shade(@fg-color, 0.5);
-}
-
 button:not(.flat)
 {
   border-color: @edge-border-color;
@@ -401,6 +392,22 @@ button.titlebutton
 button:checked, button.titlebutton:hover {
   background: @selected-color;
   border-color: @edge-border-color;
+}
+
+/* This is the default active action, the somehow "suggested" action. Usually it
+ * means this is either the expected next step action (e.g. activating a
+ * filter), or else the less destructive action (e.g. when closing an unsaved
+ * image, the default is "Cancel").
+ */
+button.suggested-action {
+  border: 1px solid shade(@fg-color, 0.8);
+}
+
+/* The "destructive" action will be for instance the "Delete Layer"
+ * button when pasting as floating data.
+ */
+button.destructive-action {
+  border: 1px dashed shade(@fg-color, 0.8)
 }
 
 /* Spinbuttons: there are two kinds:
